--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@
       <div id='landing-picture'></div>>
     </div>
   </body>
-  <script src="index.js"></script>
+  <script src="landing/index.js"></script>
 </html>
