--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="landing/style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
 
   <body>
@@ -15,5 +15,5 @@
       <div id='landing-picture'></div>>
     </div>
   </body>
-  <script src="landing/index.js"></script>
+  <script src="index.js"></script>
 </html>
