--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <div id='landing-pattern'></div>
       <div id='landing-picture'></div>>
     </div>
+
+    <div id="page-about-me">hello</div>
+
   </body>
   <script src="index.js"></script>
 </html>
