starting about me page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       <div id='landing-picture'></div>>
     </div>
 
-    <div id="page-about-me">hello</div>
+    <div id="page-about-me">
+      <div>Experience</div>
+      <div>Hobbies</div>
+    </div>
 
   </body>
   <script src="index.js"></script>
