--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
 
   <body>
     <div id='landing'>
+      <div id="name-title">Trong Nguyen</div>
+      <div id="self-desc">unfunny jokes enjoyer</div>
+      <br/><br/><br/>
       <div id = details>
-        <a href="/" class='detail'>About Me</a>
+        <a href="/" class='detail'>About me</a>
         <a href="/" class='detail'>Projects</a>
+        <a href="/" class="detail">Contacts</a>
       </div>
 
       <div id='landing-pattern'></div>
       <div id='landing-picture'></div>>
     </div>
-
-    <div id="page-about-me">
-      <div>Experience</div>
-      <div>Hobbies</div>
-    </div>
-
   </body>
   <script src="index.js"></script>
 </html>
