changed up format

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <div id='landing'>
       <div id="name-title">Trong Nguyen</div>
       <div id="self-desc">unfunny jokes enjoyer</div>
-      <br/><br/><br/>
+      <br/><br/>
       <div id = details>
         <a href="/" class='detail'>About me</a>
+        <br/>
         <a href="/" class='detail'>Projects</a>
-        <a href="/" class="detail">Contacts</a>
+        <br/>
+        <a href="/" class="detail">Contact</a>
       </div>
 
       <div id='landing-pattern'></div>
