--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id='landing'>
       <div id="name-title">Trong Nguyen</div>
-      <div id="self-desc">unfunny jokes enjoyer</div>
+      <div id="self-desc">dad joke enjoyer</div>
       <br/><br/>
       <div id = details>
         <a href="/" class='detail'>About me</a>
