added emojis to projects

--- a/index.html
+++ b/index.html
@@ -10,15 +10,37 @@
       <div id="self-desc">dad joke enjoyer</div>
       <br/><br/>
       <div id = details>
-        <a href="/" class='detail'>About me</a>
-        <br/>
-        <a href="/" class='detail'>Projects</a>
+        <a href="/" class='detail'>About</a>
         <br/>
         <a href="/" class="detail">Contact</a>
+        <br/><br/><br/><br/><br/>
+        <div id="projects-title">Projects</div>
+        <br/>
+        <div id="project-display">
+          <div class = 'project-card'>
+            <img class = 'project-pic' src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/48/smiling-face-with-sunglasses_1f60e.png" alt="">
+            <div>UNSW Mini Solar</div>
+          </div>
+          <div class = 'project-card'>
+            <img class = 'project-pic' src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/48/smiling-face-with-sunglasses_1f60e.png" alt="">
+            <div>Python</div>
+          </div>
+          <div class = 'project-card'>
+            <img class = 'project-pic' src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/81/slightly-smiling-face_1f642.png" alt="">
+            <div>Java</div>
+          </div>
+          <div class = 'project-card'>
+            <img class = 'project-pic' src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/118/crying-face_1f622.png" alt="">
+            <div>HTML/CSS/JavaScript</div>
+          </div>
+          <div class = 'project-card'>
+            <img class = 'project-pic' src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/114/loudly-crying-face_1f62d.png" alt="">
+            <div>C/C++</div>
+          </div>
+        </div>
       </div>
 
-      <div id='landing-pattern'></div>
-      <div id='landing-picture'></div>>
+      <div id='landing-picture'></div>
     </div>
   </body>
   <script src="index.js"></script>
